--- a/visa-status.html
+++ b/visa-status.html
@@ -13,6 +13,13 @@
     <main>
         <h1>Visa Application Status</h1>
         <p>Your VISA application number 12345678 has been successfully processed.</p>
+        
     </main>
+
+    <div>
+    <img src="./img 50.jpg" alt="">
+</div>
+
+    
 </body>
 </html>
