--- a/visa-status.html
+++ b/visa-status.html
@@ -3,23 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Status</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Home Section</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .gallery div {
+            margin: 10px;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <header class="header">
-        <a href="index.html" class="menu-icon">Back</a>
-    </header>
-    <main>
-        <h1>Visa Application Status</h1>
-        <p>Your VISA application number 12345678 has been successfully processed.</p>
-        
-    </main>
-
-    <div>
+    <div class="container">
+        <h1>Your VISA application number 12345678 has been successfully processed.</h1>
+        <p>CONGRATULATION !.</p>
+        <div class="gallery">
+      <div>
     <img src="./img 50.jpg" alt="">
 </div>
-
-    
 </body>
+
 </html>
+
