--- a/visa-status.html
+++ b/visa-status.html
@@ -32,17 +32,22 @@
             max-width: 100%;
             height: auto;
         }
+        #img50 {
+            width: 150%; /* Adjust this value as needed */
+            height: auto; /* Maintains the aspect ratio */
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Your VISA application number 12345678 has been successfully processed.</h1>
-        <p>CONGRATULATION !.</p>
+        <p>CONGRATULATIONS!</p>
         <div class="gallery">
-      <div>
-    <img src="./img 50.jpg" alt="">
-</div>
+            <div>
+                <img id="img50" src="./img 50.jpg" alt="Image 50">
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
 
