--- a/visa-status.html
+++ b/visa-status.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Section</title>
+    <title>Your VISA application number 12345678 has been successfully processed</title>
+    <h1>CONGRATULATIONS!</h1>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +14,7 @@
         }
         .container {
             padding: 20px;
-            text-align: center; /* Center-align the content inside .container */
+            text-align: center;
         }
         h1 {
             color: #333;
@@ -23,30 +25,27 @@
         .gallery {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* Center-align the items inside .gallery */
+            justify-content: center;
         }
         .gallery div {
             margin: 10px;
         }
         .gallery img {
+            max-width: 100%;
             height: auto;
-            display: block; /* Ensures the image behaves as a block element */
-            margin: 0 auto; /* Center-align the image horizontally */
-        }
-        #img50 {
-            width: 350%; /* Adjust this value as needed */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Your VISA application number 12345678 has been successfully processed.</h1>
-        <p>CONGRATULATIONS!</p>
+        <h1>Welcome to the Women's Section!</h1>
+        <p>Explore our collection for women.</p>
         <div class="gallery">
-            <div>
-                <img id="img50" src="./img 50.jpg" alt="Image 50">
-            </div>
-        </div>
-    </div>
+        <div>
+                                <img src="./img 50.jpg" alt="">
+                            </div>
+
+
 </body>
+
 </html>
