--- a/visa-status.html
+++ b/visa-status.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your VISA application number 12345678 has been successfully processed</title>
-    <h1>CONGRATULATIONS!</h1>
-
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
         .container {
-            padding: 20px;
             text-align: center;
         }
         h1 {
@@ -24,28 +25,31 @@
         }
         .gallery {
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
         }
         .gallery div {
             margin: 10px;
         }
         .gallery img {
-            max-width: 100%;
+            max-width: 90%;
             height: auto;
+            border: 2px solid #333;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Women's Section!</h1>
-        <p>Explore our collection for women.</p>
+        <h1>Your VISA application number 12345678 has been successfully processed</h1>
+        <p>CONGRATULATIONS!</p>
         <div class="gallery">
-        <div>
-                                <img src="./img 50.jpg" alt="">
-                            </div>
-
-
+            <div>
+                <img src="./img 50.jpg" alt="Image 50">
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
+
