--- a/visa-status.html
+++ b/visa-status.html
@@ -34,8 +34,10 @@
             margin: 10px;
         }
         .gallery img {
-            max-width: 90%;
-            height: auto;
+            width: 100%;
+            max-width: 600px; /* Set maximum width */
+            height: auto;     /* Maintain aspect ratio */
+            max-height: 600px; /* Set maximum height */
             border: 2px solid #333;
         }
     </style>
