--- a/visa-status.html
+++ b/visa-status.html
@@ -35,9 +35,9 @@
         }
         .gallery img {
             width: 100%;
-            max-width: 900px; /* Set maximum width */
-            height: auto;     /* Maintain aspect ratio */
-            max-height: 900px; /* Set maximum height */
+            max-width: 90vw; /* Set max-width relative to viewport width */
+            height: auto;
+            max-height: 90vh; /* Set max-height relative to viewport height */
             border: 2px solid #333;
         }
     </style>
@@ -54,4 +54,3 @@
     </div>
 </body>
 </html>
-
