--- a/visa-status.html
+++ b/visa-status.html
@@ -16,29 +16,34 @@
         }
         .container {
             text-align: center;
+            width: 100%;
+            padding: 20px;
         }
         h1 {
             color: #333;
+            font-size: 1.2em;
+            margin: 0.5em 0;
         }
         p {
             color: #666;
+            font-size: 1em;
+            margin: 0.5em 0;
         }
         .gallery {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 300%;
-            height: 300%;
+            width: 100%;
         }
         .gallery div {
-            margin: 10px;
+            width: 100%;
+            max-width: 90%;
         }
         .gallery img {
             width: 100%;
-            max-width: 100vw; /* Set max-width relative to viewport width */
             height: auto;
-            max-height: 100vh; /* Set max-height relative to viewport height */
             border: 2px solid #333;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
