--- a/visa-status.html
+++ b/visa-status.html
@@ -3,59 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        .container {
-            text-align: center;
-            width: 100%;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-            font-size: 1.2em;
-            margin: 0.5em 0;
-        }
-        p {
-            color: #666;
-            font-size: 1em;
-            margin: 0.5em 0;
-        }
-        .gallery {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-        }
-        .gallery div {
-            width: 100%;
-            max-width: 90%;
-        }
-        .gallery img {
-            width: 100%;
-            height: auto;
-            border: 2px solid #333;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-    </style>
+    <title>Display Image</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Your VISA application number 12345678 has been successfully processed</h1>
-        <p>CONGRATULATIONS!</p>
-        <div class="gallery">
-            <div>
-                <img src="./img 50.jpg" alt="Image 50">
-            </div>
-        </div>
-    </div>
+
+    <img src="./img 50.jpg" alt="">
+    
 </body>
 </html>
