--- a/visa-status.html
+++ b/visa-status.html
@@ -28,6 +28,8 @@
     </style>
 </head>
 <body>
+     <h1>Your VISA application number 12345678 has been successfully processed.</h1>
+        <p>CONGRATULATIONS!</p>
     <img src="./img 50.jpg" alt="Image 50">
 </body>
 </html>
