--- a/visa-status.html
+++ b/visa-status.html
@@ -15,6 +15,14 @@
             width: 100vw;
             overflow: hidden;
             background-color: #000;
+            flex-direction: column;
+        }
+        .content {
+            position: absolute;
+            top: 20px;
+            text-align: center;
+            color: white;
+            z-index: 1;
         }
         img {
             position: absolute;
@@ -28,9 +36,12 @@
     </style>
 </head>
 <body>
-     <h1>Your VISA application number 12345678 has been successfully processed.</h1>
+    <div class="content">
+        <h1>Your VISA application number 12345678 has been successfully processed.</h1>
         <p>CONGRATULATIONS!</p>
+    </div>
     <img src="./img 50.jpg" alt="Image 50">
 </body>
 </html>
+
 
