--- a/visa-status.html
+++ b/visa-status.html
@@ -22,7 +22,8 @@
             top: 20px;
             text-align: center;
             color: white;
-            z-index: 1;
+            z-index: 2; /* Ensure it is above the image */
+            width: 100%;
         }
         img {
             position: absolute;
@@ -32,6 +33,7 @@
             height: 100%;
             object-fit: cover;
             transform: translate(-50%, -50%);
+            z-index: 1; /* Image should be behind the text */
         }
     </style>
 </head>
@@ -43,5 +45,3 @@
     <img src="./img 50.jpg" alt="Image 50">
 </body>
 </html>
-
-
