--- a/visa-status.html
+++ b/visa-status.html
@@ -3,45 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Image</title>
+    <title>Men's Section</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            width: 100vw;
-            overflow: hidden;
-            background-color: #000;
-            flex-direction: column;
         }
-        .content {
-            position: absolute;
-            top: 20px;
+        .container {
+            padding: 20px;
             text-align: center;
-            color: white;
-            z-index: 2; /* Ensure it is above the image */
-            width: 100%;
         }
-        img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transform: translate(-50%, -50%);
-            z-index: 1; /* Image should be behind the text */
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .gallery div {
+            margin: 10px;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-    <div class="content">
-        <h1>Your VISA application number 12345678 has been successfully processed.</h1>
-        <p>CONGRATULATIONS!</p>
-    </div>
-    <img src="./img 50.jpg" alt="Image 50">
+    <div class="container">
+        <h1>Welcome to the Men's Section!</h1>
+        <p>Explore our collection for men.</p>
+        <div class="gallery">
+            <div><img src="./img 50.jpg" alt=""></div>
+
 </body>
+
 </html>
+
