--- a/visa-status.html
+++ b/visa-status.html
@@ -29,15 +29,15 @@
             margin: 10px;
         }
         .gallery img {
-            max-width: 100%;
+            max-width: 300%;
             height: auto;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Men's Section!</h1>
-        <p>Explore our collection for men.</p>
+        <h1>Your VISA application number 12345678 has been successfully processed</h1>
+        <p>CONGRATULATIONS!</p>
         <div class="gallery">
             <div><img src="./img 50.jpg" alt=""></div>
 
