--- a/visa-status.html
+++ b/visa-status.html
@@ -3,45 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Section</title>
+    <title>Display Image</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-        }
-        .container {
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-        .gallery {
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+            background-color: #000;
         }
-        .gallery div {
-            margin: 10px;
-        }
-        .gallery img {
-            max-width: 300%;
-            height: auto;
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Your VISA application number 12345678 has been successfully processed</h1>
-        <p>CONGRATULATIONS!</p>
-        <div class="gallery">
-            <div><img src="./img 50.jpg" alt=""></div>
-
+     
+    <img src="./img 50.jpg" alt="Image 50">
 </body>
-
-</html>
+</html>) 
 
