--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <a href="javascript:void(0);" class="close-button" onclick="toggleMenu()">Close</a>
     </div>
 
+     <div>
+                                <img src="./img 0.jpg" alt="">
+                                
+                            
+                            </div>
+
     <div>
         <img src="./img 1.jpg" alt="">
                                     </div>
