--- a/visa-status.html
+++ b/visa-status.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -16,28 +17,31 @@
             overflow: hidden;
             background-color: #000;
         }
+        .content {
+            position: relative;
+            text-align: center;
+            color: white;
+            z-index: 2; /* Ensure it is above the image */
+            padding: 20px;
+        }
         img {
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 100%;
-            height: 100%;
+            width: 90%; /* Adjust width to make the image smaller */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 80%; /* Ensure it doesn't exceed 80% of viewport height */
             object-fit: cover;
             transform: translate(-50%, -50%);
+            z-index: 1; /* Image should be behind the text */
         }
     </style>
 </head>
 <body>
-     <div class="container">
+    <div class="content">
         <h1>Your VISA application number 12345678 has been successfully processed.</h1>
         <p>CONGRATULATIONS!</p>
-        <div class="gallery">
-           <div>
-        <img src="./img 50.jpg" alt="Image 50">
-                
-                                    </div>
-
-    
+    </div>
+    <img src="./img 50.jpg" alt="Image 50">
 </body>
-</html>) 
-
+</html>
