--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
     <img src="img 0.13.jpg" alt="">
     <img src="img 0.14.jpg" alt="">
     <img src="img 0.15.jpg" alt="">
-
+  <img src="img 0.16.jpg" alt="">
   
 </body>
 </html>
