--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-      
+      <div>
     <img src="img 0.4.jpg" alt="">
     <img src="img 0.5.jpg" alt="">
     <img src="img 0.6.jpg" alt="">
@@ -38,7 +38,7 @@
     <img src="img 0.14.jpg" alt="">
     <img src="img 0.15.jpg" alt="">
   <img src="img 0.16.jpg" alt="">
-  
+  </div>
 </body>
 </html>
 
