--- a/home.html
+++ b/home.html
@@ -14,5 +14,20 @@
         <h1>Home Page</h1>
         <p>Welcome to the Home Page!</p>
     </main>
+     <div>
+    <img src="img 0.4.jpg" alt="">
+    <img src="img 0.5.jpg" alt="">
+    <img src="img 0.6.jpg" alt="">
+    <img src="img 0.7.jpg" alt="">
+    <img src="img 0.8.jpg" alt="">
+    <img src="img 0.9.jpg" alt="">
+    <img src="img 0.10.jpg" alt="">
+    <img src="img 0.11.jpg" alt="">
+    <img src="img 0.12.jpg" alt="">
+    <img src="img 0.13.jpg" alt="">
+    <img src="img 0.14.jpg" alt="">
+    <img src="img 0.15.jpg" alt="">
+  <img src="img 0.16.jpg" alt="">
+  </div>
 </body>
 </html>
