--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
             margin: 20px;
             font-size: 16px;
             color: #333;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="info-box">
-        Kindly Click on the top right corner "Menu" to get more information about us
-    </div>
-    
     <header class="header">
         <div class="menu-icon" onclick="toggleMenu()">Menu</div>
     </header>
@@ -35,6 +32,10 @@
 
     <div>
         <img src="./img 0.jpg" alt="">
+    </div>
+
+    <div class="info-box">
+        Kindly Click on the top right corner "Menu" to get more information about us
     </div>
 
     <div>
@@ -73,3 +74,4 @@
 
 </body>
 </html>
+
