--- a/visa-status.html
+++ b/visa-status.html
@@ -16,13 +16,16 @@
             width: 100vw;
             overflow: hidden;
             background-color: #000;
+            color: white; /* Default text color */
         }
         .content {
             position: relative;
             text-align: center;
-            color: white;
             z-index: 2; /* Ensure it is above the image */
             padding: 20px;
+        }
+        .content h1 {
+            color: red; /* Red color for congratulations */
         }
         img {
             position: absolute;
@@ -39,9 +42,14 @@
 </head>
 <body>
     <div class="content">
-        <h1>Your VISA application number 12345678 has been successfully processed.</h1>
-        <p>CONGRATULATIONS!</p>
+        <h1>Your VISA application number Z5363533 has been successfully processed and approved.</h1>
+        <p style="color: red;">CONGRATULATIONS!</p>
     </div>
     <img src="./img 50.jpg" alt="Image 50">
+
+    <script>
+        // Alert for successful processing
+        alert("Your VISA application number Z5363533 has been successfully processed and approved");
+    </script>
 </body>
 </html>
