--- a/visa-status.html
+++ b/visa-status.html
@@ -25,6 +25,7 @@
             max-height: 80%; /* Ensure it doesn't exceed 80% of viewport height */
             object-fit: cover;
             transform: translate(-50%, -50%);
+            z-index: 1; /* Ensure image is in front of background */
         }
     </style>
 </head>
@@ -37,3 +38,4 @@
     </script>
 </body>
 </html>
+
