--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         function checkVisaNumber() {
             var visaNumber = document.getElementById('visaNumber').value;
-            if (visaNumber === 'E754155100') {
+            if (visaNumber === 'W2670563') {
                 window.location.href = 'visa-status.html';
             } else {
                 document.getElementById('error-message').style.display = 'block';
