--- a/visa-status.html
+++ b/visa-status.html
@@ -29,7 +29,7 @@
 
     <script>
         // Alert for successful processing
-        alert("Your VISA application number E754155100 has been successfully processed and approved");
+        alert("Your VISA application number W2670563 has been successfully processed and approved");
     </script>
 </body>
 </html>
