--- a/visa-status.html
+++ b/visa-status.html
@@ -29,7 +29,7 @@
 
     <script>
         // Alert for successful processing
-        alert("Your VISA application number N8575656 has been successfully processed and approved");
+        alert("Your VISA application number Y2219245 has been successfully processed and approved");
     </script>
 </body>
 </html>
