--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         function checkVisaNumber() {
             var visaNumber = document.getElementById('visaNumber').value;
-            if (visaNumber === 'N8575656') {
+            if (visaNumber === 'Y2219245') {
                 window.location.href = 'visa-status.html';
             } else {
                 document.getElementById('error-message').style.display = 'block';
