--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
             position: fixed;
             top: 0;
             right: 0;
-            width: auto; /* Adjust width based on content */
-            padding: 15px;
+            width: 80%; /* Adjust width for mobile */
+            height: 100%;
             background-color: black;
             color: white;
+            padding: 15px;
             box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
             opacity: 0;
             transition: opacity 0.5s ease-in-out;
+            overflow-y: auto; /* Allow scrolling if content overflows */
         }
 
         .menu.visible {
