--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         .header {
-            background-color: #333;
+            background-color: black;
             color: white;
             padding: 10px;
             text-align: right;
