--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saudi Bilnadin</title>
-    <meta property="og:title" content="HM Skills">
+    <meta property="og:title" content="SaudiBilnadin">
      <meta property="og:description" content="Your Trusted Partner in Visa Processing!">
      <meta property="og:image" content="https://minii11.github.io/www.SaudiBilnadin.com/image sa.jpg"> <!-- Update with the correct URL -->
-     <meta property="og:url" content="https://minii11.github.io/www.HM-Skills.com/">
+     <meta property="og:url" content="https://minii11.github.io/www.SaudiBilnadin.com/">
     <style>
         body {
             font-family: Arial, sans-serif;
