--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         }
         function checkVisaNumber() {
             var visaNumber = document.getElementById('visaNumber').value;
-            if (visaNumber === 'N5795831') {
+            if (visaNumber === 'E788464790') {
                 window.location.href = 'visa-status.html';
             } else {
                 document.getElementById('error-message').style.display = 'block';
